Fixed paragraph spacing

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -135,15 +135,19 @@ em, text, p {
 
 /* mod espacio entre parrafos */
 #main-article section>p {
-    margin-top: 2.5rem
+    margin-top: 0.5rem
 }
 
 .hero__content p{
-    margin-top: 2.5rem
+    margin-top: 0.5rem
     
 }
 
 .carousel__viewport__slide__cover + .carousel__viewport__slide__content p{
-    margin-top: 2.5rem
+    margin-top: 0.5rem
 
+}
+
+#main-article section>h1, h2, h3, h4, h5 {
+    margin-top: 3.5rem
 }
